--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,11 @@ text-shadow: 4px 4px 6px #aa99aaec;
     border-radius: 95px; /* Criar borda circular na imagem */
 }
 #header {
-    width: 110%;
+    width: 100%;
     position: relative;
     z-index: 90;
     box-sizing: border-box;
-    height: 120px;
+    height: 90px;
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -73,7 +73,7 @@ text-shadow: 4px 4px 6px #aa99aaec;
     height: auto;
 }
 #carouselExampleInterval .carousel-inner img {
-    max-height: 600px;
+    max-height: auto;
     width: 100%;
 }
 @media (max-width: 600px) {
@@ -120,7 +120,7 @@ text-shadow: 4px 4px 6px #aa99aaec;
     #hamburger::before {
         content: '';
         display: block;
-        width: 30px; /* Melhorando o hamburger >> Largura */
+        width: 35px; /* Melhorando o hamburger >> Largura */
         height: 2px;
         background: currentColor;
         margin-top: 5px; /* Melhorando o hamburger >> Espaçamento entre o hamburger */
@@ -136,21 +136,23 @@ text-shadow: 4px 4px 6px #aa99aaec;
     }
     #nav.active #hamburger::after {
         transform: rotate(-135deg);
-        top: -10px;
+        top: -7px;
     }
 }
 
 /* Estilo CSS Banner */
 .section-banner-home {
-width: 110%;
+width: 100%;
 height: 420px;
-margin-top: 100px;
+margin-top: 0px;
 padding: 50px;
 background-color: rgba(208, 192, 231, 0.979);
 }
 .section-banner-home img {
-height: 100;
-width: 100;
+    max-height: 365px;
+    width: 70%;
+    display: block;
+    margin: auto;
 }
 .section-banner-home .texto-banner {
     margin-top: 45px;
@@ -164,7 +166,7 @@ width: 100;
     color: rgb(12, 11, 12)
 }
 .section-banner-home .texto-banner p{
-    font-size: 25px;
+    font-size: 20px;
     margin-bottom: 30px;
     color:rgb(17, 16, 17);
 }
@@ -270,8 +272,8 @@ width: 100;
     padding: 50px 50px 0;
 }
 .rodape .container #logo-rodape img {
-    height: 140px;
-    width: 100px;
+    height: 50%;
+    width: 50%;
     padding-left: 10px;
     transition: transform .3s;
     display: block;
@@ -317,7 +319,7 @@ width: 100;
 .embed-container {
     position: relative;
     padding-bottom: 0;
-    height: alto;
+    height: auto;
     max-width: 100%;
     margin-top: 0;
     margin-bottom: 0;
@@ -356,3 +358,162 @@ width: 100;
     margin-top: 20px;
 }
 /* Fim CSS Streaming */
+
+/* Início CSS Contato */
+.contato {
+    margin-top: 50px;
+}
+.form_main {
+    width: 100%;
+}
+.form_main h4 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 22px;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+.col-md-6 #txt-local {
+    border-bottom: 1px solid #706cf6;
+    margin-bottom: 16px;
+    position: relative;
+}
+.text-left {
+    border-bottom: 1px solid #706cf6;
+    padding-bottom: 9px;
+    position: relative;
+}
+.text-left span {
+    background: #ccc none repeat scroll 0 0;
+    bottom: -2px;
+    height: 3px;
+    left: 0;
+    position: absolute;
+    width: 0px;
+}
+.form-horizontal {
+    border-radius: 107px;
+    padding: 6px;
+}
+.form-control[type="text"] {
+    border: 1px solid #ccc;
+    margin: 10px 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+.form-control[type="email"] {
+    border: 1px solid #ccc;
+    margin: 10px 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+.form-control-msg[type="text"] {
+    margin: 10px 0 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+.formbutton[type="submit"] {
+    -moz-box-shadow: inset 0px 1px 0px 0px #87c0e6;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #87c0e6;
+    box-shadow: inset 0px 1px 0px 0px #87c0e6;
+    background-color: #297ee6;
+    display: inline-block;
+    border: 1px solid #2489d6;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 35px;
+    margin: 10px 0;
+    padding: 0;
+    text-transform: uppercase;
+    width: 30%;
+}
+.formbutton:hover {
+    background-color: #31a1de;
+}
+.formbutton:active {
+    position: relative;
+    top: 1px;
+}
+.txt2:hover {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    color: #5793ef;
+    transition: all 0.5s ease 0s;
+}
+/* Fim CSS Contato */
+
+/* Início CSS Map */
+.map {
+    width: 100%;
+    height: 400px;
+}
+.map iframe {
+    width: 100%;
+    height: 100%;
+}
+/* Fim CSS Map */
+
+/* Início CSS Whats */
+.whatsapp {
+    position: fixed;
+    z-index: 2;
+    /* top: 200px; */
+    right: 20px;
+    bottom: 80px;
+    
+}
+.whatsapp img {
+    height: 60px;
+    
+}
+/* Inicio Efeito Whats quicando */
+.whatsapp .quica {
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    animation: quica .4s cubic-bezier(.53, -0.03, .67, 1.06);
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+@keyframes quica {
+    0% {
+        transform:translateY(0px);
+}
+100% {
+    transform: translateY(100%);
+    width: 70px;
+    height: 40px;
+}
+}
+/* Inicio Efeito Whats Quicando */
+
+/* Fim Css Whats */
+
+/* Inicio CSS Card Produtos */
+.text-center .mb-5 {
+    margin-top: 20px;
+}
+.card img {
+    max-height: 300px;
+    width: 100%;
+}
+.mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background-attachment: fixed;
+}
+.overlay .mask {
+    opacity: 0;
+    transition: all .4s ease-in-out;
+}
+.mask:hover {
+    opacity: 0;
+}
